fix(datepicker): no modal cutoff on small screens (#1479)

--- a/projects/ng-aquila/src/datefield/datepicker/datepicker-content.component.scss
+++ b/projects/ng-aquila/src/datefield/datepicker/datepicker-content.component.scss
@@ -36,6 +36,8 @@ $calendar-width-mobile: calc(7 * #{$item-size} + 2 * #{$spacing-sides-calendar-m
 .nx-calendar-focus-trap {
     display: flex;
     flex-flow: column nowrap;
+    max-height: 95vh;
+    overflow-y: auto;
 }
 
 .nx-datepicker-header {
